# mpi-2ddc

./: CMakeLists.txt  LICENSE  LINUXHWINFO.md  README.md  SLURMCLUSTERS_INFO.md  darray.h  makefile  mpi-2ddc-5x5demo.cpp  mpi-2ddc-main.cpp  serial.cpp  test-job.sh
examples/: PRINTNODES_DIRECTIONS.md  print-nodes-job.sh  print-nodes.cpp  test-serial-slurm-cluster.sh
include/: darray.h  matrix.h
slurm-scripts/: test-mpi-slurm-cluster.sh
src/: makefile  mpi-2ddc-5x5demo.cpp  mpi-2ddc-main.cpp  openmp-main.cpp  serial.cpp
